# micro-forge

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  cross-compile.yml
document/archive/: 01b-error-diagnostics.md  01d-arm-fault-semantics.md  01e-cortex-m3-split.md  01f-optimization-verification.md  02-stm32cube-submodule.md  03-hal-uart-fixture.md  04-arch-periph-mappings.md  old_phase1-guide.md  phase0-infrastructure.md  phase2-guide.md  phase2-toycore.md  phase3a-guide.md  phase3b-clock-tick-guide.md  phase3c-nvic-interrupt.md  phase4-guide.md  phase4-loader-peripherals.md  phase5-validation.md  phase6-01-instruction-first.md
document/milestones/: 00-v1-roadmap.md  01-cli-observability-ai.md  02-cortex-m-correctness.md  03-stm32f1-hal-peripherals.md  04-gui-debug-dashboard.md  05-extension-architecture.md  06-progress-assessment-and-replan.md  phase1-memory.md  phase3a-arm-instructions.md  phase3b-nvic-interrupt.md  phase4-loader-peripherals.md
document/milestones/phase6-hal-uart/: 01-instruction-first.md  01c-logging-trace.md  01e-cortex-m3-split.md  05-tests-diagnostics.md  06-code-quality-audit.md
document/notes/: 001-cpu-and-instruction-set.md  001-phase1-interface-walkthrough.md  002-memory-subsystem.md  002-phase3a-design-discussion.md  003-clock-tick-abstraction-proposal.md  003-peripherals-and-soc.md  004-simulation-framework-and-tools.md  004-soc-board-abstraction-research.md  005-interrupt-preemption-msp-psp.md  006-cli-and-snapshot.md  hal_blink_debug_progress.md
examples/: CMakeLists.txt
examples/gpio_blink/: CMakeLists.txt  runner.cpp
examples/gpio_blink/firmware/: CMakeLists.txt  main.c  startup.c
examples/hal_blink/: CMakeLists.txt  runner.cpp
examples/hal_blink/firmware/: CMakeLists.txt  STM32F103_HAL.ld  main.c  startup.c
examples/hal_uart/: CMakeLists.txt  runner.cpp
examples/hal_uart/firmware/: CMakeLists.txt  main.c  startup.c  stm32f1xx_hal_conf.h
examples/hello_world/: CMakeLists.txt  runner.cpp
examples/hello_world/firmware/: CMakeLists.txt  STM32F103.ld  main.c  startup.c
examples/systick/: CMakeLists.txt  runner.cpp
examples/systick/firmware/: CMakeLists.txt  STM32F103.ld  main.c  startup.c
include/arch/arm/cortex_m3/: cortex_m3.hpp  cortex_m3_reset.hpp  def.h  thumb32_fields.hpp  thumb_fields.hpp
include/arch/toy/: cpu.h  isa.h
include/autogen/: arch_details.hpp.in
include/chips/: machine.hpp
include/chips/stm32f1/: clock_domains.hpp  interrupt_config.hpp  memory_bus.hpp  peripheral_config.hpp  stm32f103_soc.hpp  stm32f1_afio.hpp  stm32f1_flash.hpp  stm32f1_gpio.hpp  stm32f1_rcc.hpp  stm32f1_timer.hpp  stm32f1_usart.hpp
include/chips/toy/: cpu.h
include/cli/: snapshot.hpp
include/core/: mem_literal.hpp  types.hpp
include/cpu/: cpu.hpp  fault_record.hpp  intr.hpp  regfile.hpp
include/loader/: binary_loader.hpp  elf_loader.hpp
include/loader/utils/: def.h  elf_parser.hpp
include/memory/: bus.hpp  flat_memory.hpp  region.hpp
include/periph/: clock_controller.hpp  device.hpp  gpio.hpp  nvic.hpp  scb.hpp  serial_port.hpp  systick.hpp  timer.hpp
include/sim/: coordinator.hpp  virtual_clock.hpp
include/tools/: memory_dump.hpp  mmio_trace.hpp
include/util/: logger.hpp
include/util/weak_ptr/: weak_ptr.h  weak_ptr_factory.h
include/util/weak_ptr/private/: weak_ptr_internals.h
scripts/: probe_missing_ops.py
src/arch/arm/cortex_m3/: cortex_m3.cpp  cortex_m3_interrupt.cpp  cortex_m3_reset.cpp  cortex_m3_thumb16.cpp  cortex_m3_thumb32.cpp
src/arch/toy/: cpu.cpp
src/chips/: machine.cpp
src/chips/cpu/: cpu.cpp
src/chips/stm32f1/: interrupt_config.cpp  memory_bus.cpp  peripheral_config.cpp  stm32f103_soc.cpp  stm32f1_afio.cpp  stm32f1_flash.cpp  stm32f1_gpio.cpp  stm32f1_rcc.cpp  stm32f1_timer.cpp  stm32f1_usart.cpp
src/cli/: main.cpp  snapshot.cpp
src/cpu/: cpu.cpp
src/loader/: binary_loader.cpp  elf_loader.cpp
src/loader/utils/: elf_parser.cpp
src/memory/: bus.cpp  flat_memory.cpp
src/periph/: nvic.cpp  scb.cpp  systick.cpp
src/sim/: coordinator.cpp  virtual_clock.cpp
src/tools/: memory_dump.cpp  mmio_trace.cpp
src/util/: logger.cpp
test/: CMakeLists.txt  test_coordinator.cpp  test_cortex_m3.cpp  test_cortex_m3_advanced.cpp  test_cortex_m3_basic.cpp  test_cortex_m3_common.hpp  test_cortex_m3_faults.cpp  test_cortex_m3_lifecycle.cpp  test_cpu.cpp  test_e2e.cpp  test_elf_loader.cpp  test_flat_memory.cpp  test_interrupt_roundtrip.cpp  test_memory_bus.cpp  test_nvic.cpp  test_stm32f103_map.cpp  test_stm32f103_soc.cpp  test_stm32f1_periph.cpp  test_systick.cpp  test_tools.cpp  test_types.cpp  test_virtual_clock.cpp
